--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="register_helper_password_strong">Strong</string>
     <string name="register_error_email">Email address is not valid!</string>
     <string name="register_error_password_short">Password should be at least 6 characters!</string>
-    <string name="register_error_password">Your password and retype password do not match!</string>
+    <string name="register_error_password_not_match">Your password and retype password do not match!</string>
     <string name="register_error_account_exists">An account with the provided email already exists.</string>
 
     <!--Forgot Password Fragment-->
