--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -59,8 +59,8 @@
     <string name="forgot_pw_hint_email">Enter your email address</string>
     <string name="forgot_pw_btn_send">Send Email</string>
     <string name="forgot_pw_btn_return">Return To Login</string>
-    <string name="forgot_pw_error_timer_is_not_zero_one">Please wait for %d second before requesting again…</string>
-    <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %d seconds before requesting again…</string>
+    <string name="forgot_pw_error_timer_is_not_zero_one">Please wait for %d second before requesting again.</string>
+    <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %d seconds before requesting again.</string>
     <string name="forgot_pw_error_email">Email address is not valid!</string>
     <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
 
