--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="login_btn_login">Login</string>
     <string name="login_text_register_title">Don’t have an account?</string>
     <string name="login_btn_register">Register</string>
+    <string name="login_error_blank_email">Enter your email address!</string>
+    <string name="login_error_blank_password">Enter your password!</string>
     <string name="login_error_email">Email address is not valid!</string>
     <string name="login_error_not_found">The account with the provided email does not exist.</string>
     <string name="login_error_credentials">The provided credentials are incorrect.</string>
@@ -46,6 +48,9 @@
     <string name="register_helper_password_weak">Weak</string>
     <string name="register_helper_password_mediocre">Mediocre</string>
     <string name="register_helper_password_strong">Strong</string>
+    <string name="register_error_blank_email">Enter your email address!</string>
+    <string name="register_error_blank_password">Enter your password!</string>
+    <string name="register_error_blank_retype_password">Re-enter your password!</string>
     <string name="register_error_email">Email address is not valid!</string>
     <string name="register_error_password_short">Password should be at least 6 characters!</string>
     <string name="register_error_password_not_match">Your password and retype password do not match!</string>
@@ -58,6 +63,7 @@
     <string name="forgot_pw_hint_email">Enter your email address</string>
     <string name="forgot_pw_btn_send">Send Email</string>
     <string name="forgot_pw_btn_return">Return To Login</string>
+    <string name="forgot_pw_error_blank_email">Enter your email address!</string>
     <string name="forgot_pw_error_timer_is_not_zero_one">Please wait for %d second before requesting again.</string>
     <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %d seconds before requesting again.</string>
     <string name="forgot_pw_error_email">Email address is not valid!</string>
@@ -155,6 +161,7 @@
     <string name="add_warranty_hint_date">mm/dd/yyyy</string>
     <string name="add_warranty_title_date_picker_starting">Select Starting Date</string>
     <string name="add_warranty_title_date_picker_expiry">Select Expiry Date</string>
+    <string name="add_warranty_error_blank_title">Enter the title!</string>
     <string name="add_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
     <string name="add_warranty_checkbox_lifetime">Lifetime Warranty</string>
     <string name="add_warranty_format_date">%1$s/%2$s/%3$d</string> <!--mm/dd/yyyy-->
@@ -202,6 +209,7 @@
     <string name="edit_warranty_hint_date">mm/dd/yyyy</string>
     <string name="edit_warranty_title_date_picker_starting">Select Starting Date</string>
     <string name="edit_warranty_title_date_picker_expiry">Select Expiry Date</string>
+    <string name="edit_warranty_error_blank_title">Enter the title!</string>
     <string name="edit_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
     <string name="edit_warranty_checkbox_lifetime">Lifetime Warranty</string>
     <string name="edit_warranty_format_date">%1$s/%2$s/%3$d</string> <!--mm/dd/yyyy-->
@@ -235,11 +243,14 @@
     <string name="change_password_title_new">New Password</string>
     <string name="change_password_hint_new">Enter a new password</string>
     <string name="change_password_title_retype">Retype New Password</string>
-    <string name="change_password_hint_retype">Retype the new password</string>
+    <string name="change_password_hint_retype">Re-enter the new password</string>
     <string name="change_password_btn_change">Change Password</string>
     <string name="change_password_helper_password_weak">Weak</string>
     <string name="change_password_helper_password_mediocre">Mediocre</string>
     <string name="change_password_helper_password_strong">Strong</string>
+    <string name="change_password_error_blank_current">Enter your current password!</string>
+    <string name="change_password_error_blank_new">Enter a new password!</string>
+    <string name="change_password_error_blank_retype">Re-enter the new password!</string>
     <string name="change_password_error_password_short">Password should be at least 6 characters!</string>
     <string name="change_password_error_match">New password and retype new password do not match!</string>
     <string name="change_password_error_credentials">The provided credentials are incorrect.</string>
@@ -253,6 +264,8 @@
     <string name="change_email_title_new_email">New Email Address</string>
     <string name="change_email_hint_new_email">Enter a new email address</string>
     <string name="change_email_btn_change">Change Email</string>
+    <string name="change_email_error_blank_password">Enter your password!</string>
+    <string name="change_email_error_blank_new_email">Enter a new email address!</string>
     <string name="change_email_error_new_email">New email address is not valid!</string>
     <string name="change_email_error_credentials">The provided credentials are incorrect.</string>
     <string name="change_email_error_email_same">New email address cannot be the same as your current email!</string>
