--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -20,7 +20,7 @@
     <string name="login_text_title">Login</string>
     <string name="login_text_description">Let’s log you in.</string>
     <string name="login_title_email">Email Address</string>
-    <string name="login_hint_email">example@email.com</string>
+    <string name="login_hint_email">Enter your email address</string>
     <string name="login_title_password">Password</string>
     <string name="login_hint_password">Enter your password</string>
     <string name="login_btn_forgot_pw">Forgot Password?</string>
