--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -88,7 +88,7 @@
     <string name="warranties_text_title">Warranty List</string>
     <string name="warranties_menu_hint_search">Search by title…</string>
     <string name="warranties_text_empty_warranties_list">There is currently no warranty on your list. You can add a warranty by clicking on the <font fgcolor="#1C53F4">Add Button</font>.</string>
-    <string name="warranties_text_empty_search_result_list"><![CDATA[We couldn\'t find any warranty that matches your search for <font fgcolor="#1C53F4">%1$s</font>.]]></string>
+    <string name="warranties_text_empty_search_result_list">We couldn\'t find any warranty that matches your search for <font fgcolor="#1C53F4">%1$s</font>.</string>
     <string name="warranties_list_status_valid">Valid</string>
     <string name="warranties_list_status_soon">Soon</string>
     <string name="warranties_list_status_expired">Expired</string>
