--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -224,9 +224,12 @@
     <string name="settings_text_account_change_email">Change Email Address</string>
     <string name="settings_text_account_change_password">Change Password</string>
     <string name="settings_text_settings_language">Language</string>
-    <string name="settings_text_settings_language_english_us">English (United States)</string>
-    <string name="settings_text_settings_language_english_gb">English (United Kingdom)</string>
+    <string name="settings_text_settings_language_english_us">English (US)</string>
+    <string name="settings_text_settings_language_english_gb">English (UK)</string>
     <string name="settings_text_settings_language_persian_ir">Persian</string>
+    <string name="settings_dialog_item_language_english_us">English (United States)</string>
+    <string name="settings_dialog_item_language_english_gb">English (United Kingdom)</string>
+    <string name="settings_dialog_item_language_persian_ir">Persian</string>
     <string name="settings_text_settings_theme">Theme</string>
     <string name="settings_text_settings_theme_default">System Default</string>
     <string name="settings_text_settings_theme_light">Light</string>
