--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,11 @@
     <string name="main_menu_title_warranties">Warranty List</string>
     <string name="main_menu_title_settings">Settings</string>
     <string name="main_text_content_description">Add Warranty</string>
+    <string name="main_rate_app_dialog_title">Rate %1$s?</string>
+    <string name="main_rate_app_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
+    <string name="main_rate_app_dialog_positive">Rate now</string>
+    <string name="main_rate_app_dialog_negative">No, Thanks</string>
+    <string name="main_rate_app_dialog_neutral">Remind me later</string>
 
     <!--Warranties Fragment-->
     <string name="warranties_text_title">Warranty List</string>
