--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -244,6 +244,8 @@
     <string name="settings_text_settings_theme_light">Light</string>
     <string name="settings_text_settings_theme_dark">Dark</string>
     <string name="settings_text_settings_donate">Donate</string>
+    <string name="settings_text_settings_improve_translations">Improve Translations</string>
+    <string name="settings_text_settings_rate_us">Rate Us</string>
     <string name="settings_text_settings_privacy_policy">Privacy Policy</string>
     <string name="settings_btn_logout">Logout</string>
     <string name="settings_dialog_message">The verification email has been successfully sent to your inbox.</string>
