Improved String Comments for CrowdIn Translations

--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -2,7 +2,6 @@
 <resources>
     <string name="app_name">وارانتی راستر</string>
 
-    <!--Errors-->
     <string name="error_network_connection">اتصال به اینترنت امکان‌پذیر نیست.</string>
     <string name="error_network_failure">مشکلی برای شبکه رخ داده است. لطفا بعدا دوباره امتحان کنید.</string>
     <string name="error_firebase_403">این سرویس در منطقه شما در دسترس نیست. لطفاً از نرم‌افزار تغییر آدرس IP استفاده کنید.</string>
@@ -11,13 +10,11 @@
     <string name="error_btn_retry">تلاش مجدد</string>
     <string name="error_btn_confirm">تایید</string>
 
-    <!--Landing Activity-->
     <string name="landing_text_language">زبان</string>
     <string name="landing_text_language_english_us">انگلیسی (آمریکایی)</string>
     <string name="landing_text_language_english_gb">انگلیسی (بریتانیایی)</string>
     <string name="landing_text_language_persian_ir">فارسی</string>
 
-    <!--Login Fragment-->
     <string name="login_text_title">ورود</string>
     <string name="login_text_description">بیایید وارد برنامه شویم.</string>
     <string name="login_title_email">آدرس ایمیل</string>
@@ -34,7 +31,6 @@
     <string name="login_error_not_found">حسابی با ایمیل وارد شده وجود ندارد.</string>
     <string name="login_error_credentials">ایمیل و یا رمز‌عبور وارد شده نادرست است.</string>
 
-    <!--Register Fragment-->
     <string name="register_text_title">ثبت‌نام</string>
     <string name="register_text_description">اطلاعات خود را وارد کنید.</string>
     <string name="register_text_agreement">با ثبت‌نام، شما <font fgcolor="#1C53F4"><b>سیاست حریم خصوصی</b></font> ما را می‌پذیرید.</string>
@@ -58,7 +54,6 @@
     <string name="register_error_password_not_match">رمز‌عبور و تکرار رمز‌عبور وارد شده با هم مطابقت ندارند!</string>
     <string name="register_error_account_exists">حسابی با ایمیل وارد شده از قبل وجود دارد.</string>
 
-    <!--Forgot Password Fragment-->
     <string name="forgot_pw_text_title">بازیابی\nرمز‌عبور</string>
     <string name="forgot_pw_text_description">برای دریافت دستورالعمل‌های بازیابی رمز‌عبور، ایمیل تایید‌شده خود را وارد کنید.</string>
     <string name="forgot_pw_title_email">آدرس ایمیل</string>
@@ -75,7 +70,6 @@
     <string name="forgot_pw_error_email">آدرس ایمیل وارد شده، معتبر نیست!</string>
     <string name="forgot_pw_error_not_found">حسابی با ایمیل وارد شده وجود ندارد.</string>
 
-    <!--Forgot Password Sent Fragment-->
     <string name="forgot_pw_sent_text_title">صندوق ایمیل\nخود را\nبررسی کنید</string>
     <string name="forgot_pw_sent_text_description">لطفا صندوق ایمیل خود را بررسی کنید و روی لینک دریافتی کلیک کنید تا رمز‌عبور خود را بازیابی کنید.</string>
     <string name="forgot_pw_sent_text_resend">لینکی را دریافت نکردید؟</string>
@@ -84,26 +78,36 @@
     <string name="forgot_pw_sent_text_resent">ایمیل مجددا ارسال شد.</string>
     <string name="forgot_pw_sent_btn_return">بازگشت به صفحه ورود</string>
 
-    <!--Main Activity-->
     <string name="main_menu_title_warranties">فهرست گارانتی‌ها</string>
     <string name="main_menu_title_settings">تنظیمات</string>
     <string name="main_text_content_description">افزودن گارانتی</string>
-    <string name="main_rate_app_dialog_title">امتیاز به %1$s؟</string>
+    <!--Placeholder for the App Name-->
+    <string name="main_rate_app_dialog_title">امتیاز به %s؟</string>
     <string name="main_rate_app_dialog_message">اگر از استفاده از این برنامه لذت می‌برید، در صورت امکان به آن امتیاز دهید. بیشتر از یک دقیقه طول نمی‌کشد. از حمایت شما متشکریم!</string>
     <string name="main_rate_app_dialog_positive">الان امتیاز می‌دهم</string>
     <string name="main_rate_app_dialog_negative">نه، ممنون</string>
     <string name="main_rate_app_dialog_neutral">بعدا بهم یادآوری کن</string>
 
-    <!--Warranties Fragment-->
     <string name="warranties_text_title">فهرست گارانتی‌ها</string>
     <string name="warranties_menu_hint_search">جستجو بر اساس عنوان…</string>
     <string name="warranties_text_empty_warranties_list">در حال حاضر هیچ گارانتی در لیست شما وجود ندارد. با کلیک بر روی <font fgcolor="#1C53F4">دکمه افزودن</font> می‌توانید یک گارانتی اضافه کنید.</string>
-    <string name="warranties_text_empty_search_result_list">هیچ گارانتی‌ای پیدا نکردیم که با جستجوی شما برای <font fgcolor="#1C53F4">%1$s</font> مطابقت داشته باشد.</string>
+    <string name="warranties_text_empty_search_result_list">هیچ گارانتی‌ای پیدا نکردیم که با جستجوی شما برای <font fgcolor="#1C53F4">%s</font> مطابقت داشته باشد.</string>
     <string name="warranties_list_status_valid">معتبر</string>
     <string name="warranties_list_status_soon">به‌زودی</string>
     <string name="warranties_list_status_expired">منقضی‌شده</string>
     <string name="warranties_list_is_lifetime">گارانتی مادام‌العمر</string>
-    <string name="warranties_list_format_date">%2$s %1$s، %3$d</string> <!--day_with_suffix month_name, yyyy-->
+    <!--
+    Placeholders:
+    • %1$s: Month Name
+    • %2$s: Day with Suffix
+    • %3$d: Year (yyyy)
+
+    Samples:
+    • en-US: December 25th, 2022
+    • en-GB: 25th of December, 2022
+    • fa-IR: بیست و پنجم دسامبر، ۲۰۲۲
+    -->
+    <string name="warranties_list_format_date">%2$s %1$s، %3$d</string>
     <string-array name="warranties_list_day_with_suffix">
         <item>اول</item>
         <item>دوم</item>
@@ -152,7 +156,6 @@
         <item>دسامبر</item>
     </string-array>
 
-    <!--Add Warranty Fragment-->
     <string name="add_warranty_text_title">افزودن گارانتی</string>
     <string name="add_warranty_menu_title_add">افزودن گارانتی</string>
     <string name="add_warranty_title_title">عنوان</string>
@@ -175,9 +178,19 @@
     <string name="add_warranty_error_blank_title">عنوان را وارد کنید!</string>
     <string name="add_warranty_error_date">تاریخ شروع نمی‌تواند بعد از تاریخ اتمام باشد!</string>
     <string name="add_warranty_checkbox_lifetime">گارانتی مادام‌العمر</string>
-    <string name="add_warranty_format_date">%3$d/%1$s/%2$s</string> <!--yyyy/mm/dd-->
+    <!--
+    Placeholders:
+    • %1$s: Month (mm)
+    • %2$s: Day (dd)
+    • %3$d: Year (yyyy)
 
-    <!--Warranty Details Fragment-->
+    Samples:
+    • en-US: 12/25/2022
+    • en-GB: 25/12/2022
+    • fa-IR: 2022/12/25
+    -->
+    <string name="add_warranty_format_date">%3$d/%1$s/%2$s</string>
+
     <string name="warranty_details_fab_edit">ویرایش</string>
     <string name="warranty_details_menu_title_delete">حذف گارانتی</string>
     <string name="warranty_details_title_date_starting">تاریخ شروع</string>
@@ -193,13 +206,25 @@
     <string name="warranty_details_is_lifetime">مادام‌العمر</string>
     <string name="warranty_details_empty_description">هیچ توضیحی وارد نشده.</string>
     <string name="warranty_details_delete_dialog_title">گارانتی حذف شود؟</string>
+    <!--Placeholder for the Warranty Title-->
     <string name="warranty_details_delete_dialog_message">آیا مطمئنید که می‌خواهید %s را حذف کنید؟</string>
     <string name="warranty_details_delete_dialog_positive">حذف</string>
     <string name="warranty_details_delete_dialog_negative">لغو</string>
+    <!--Placeholder for the Warranty Title-->
     <string name="warranty_details_delete_success">%s با موفقیت حذف شد.</string>
-    <string name="warranty_details_format_date">%3$d/%1$s/%2$s</string> <!--yyyy/mm/dd-->
+    <!--
+    Placeholders:
+    • %1$s: Month (mm)
+    • %2$s: Day (dd)
+    • %3$d: Year (yyyy)
 
-    <!--Edit Warranty Fragment-->
+    Samples:
+    • en-US: 12/25/2022
+    • en-GB: 25/12/2022
+    • fa-IR: 2022/12/25
+    -->
+    <string name="warranty_details_format_date">%3$d/%1$s/%2$s</string>
+
     <string name="edit_warranty_text_title">ویرایش گارانتی</string>
     <string name="edit_warranty_menu_title_edit">ویرایش گارانتی</string>
     <string name="edit_warranty_title_title">عنوان</string>
@@ -222,9 +247,19 @@
     <string name="edit_warranty_error_blank_title">عنوان را وارد کنید!</string>
     <string name="edit_warranty_error_date">تاریخ شروع نمی‌تواند بعد از تاریخ اتمام باشد!</string>
     <string name="edit_warranty_checkbox_lifetime">گارانتی مادام‌العمر</string>
-    <string name="edit_warranty_format_date">%3$d/%1$s/%2$s</string> <!--yyyy/mm/dd-->
+    <!--
+    Placeholders:
+    • %1$s: Month (mm)
+    • %2$s: Day (dd)
+    • %3$d: Year (yyyy)
 
-    <!--Settings Fragment-->
+    Samples:
+    • en-US: 12/25/2022
+    • en-GB: 25/12/2022
+    • fa-IR: 2022/12/25
+    -->
+    <string name="edit_warranty_format_date">%3$d/%1$s/%2$s</string>
+
     <string name="settings_text_title">تنظیمات</string>
     <string name="settings_title_account">حساب کاربری</string>
     <string name="settings_title_settings">تنظیمات</string>
@@ -251,7 +286,6 @@
     <string name="settings_dialog_message">ایمیل تأیید با موفقیت به صندوق ایمیلتان ارسال شد.</string>
     <string name="settings_dialog_positive">تایید</string>
 
-    <!--Change Password Fragment-->
     <string name="change_password_text_title">تغییر رمز‌عبور</string>
     <string name="change_password_title_current_password">رمز‌عبور فعلی</string>
     <string name="change_password_hint_current_password">رمز‌عبور فعلی خود را وارد کنید</string>
@@ -272,7 +306,6 @@
     <string name="change_password_dialog_message">رمز‌عبور شما با موفقیت تغییر کرد.</string>
     <string name="change_password_dialog_positive">تایید</string>
 
-    <!--Change Email Fragment-->
     <string name="change_email_text_title">تغییر آدرس ایمیل</string>
     <string name="change_email_title_password">رمز‌عبور</string>
     <string name="change_email_hint_password">رمز‌عبور خود را وارد کنید</string>
