--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Warranty Roster</string>
 
-    <!--Errors-->
     <string name="error_network_connection">Unable to connect to the internet.</string>
     <string name="error_network_failure">You\'re having network issues. Please try again later.</string>
     <string name="error_firebase_403">This service is not available in your region. Please consider changing your IP address by using a VPN.</string>
@@ -10,13 +9,11 @@
     <string name="error_btn_retry">Retry</string>
     <string name="error_btn_confirm">Confirm</string>
 
-    <!--Landing Activity-->
     <string name="landing_text_language">Language</string>
     <string name="landing_text_language_english_us">English (United States)</string>
     <string name="landing_text_language_english_gb">English (United Kingdom)</string>
     <string name="landing_text_language_persian_ir">Persian</string>
 
-    <!--Login Fragment-->
     <string name="login_text_title">Login</string>
     <string name="login_text_description">Let\'s log you in.</string>
     <string name="login_title_email">Email Address</string>
@@ -33,7 +30,6 @@
     <string name="login_error_not_found">The account with the provided email does not exist.</string>
     <string name="login_error_credentials">The provided credentials are incorrect.</string>
 
-    <!--Register Fragment-->
     <string name="register_text_title">Register</string>
     <string name="register_text_description">Enter your information below.</string>
     <string name="register_text_agreement">By registering, you agree to our <font fgcolor="#1C53F4"><b>Privacy Policy</b></font>.</string>
@@ -57,7 +53,6 @@
     <string name="register_error_password_not_match">Your password and confirm password do not match!</string>
     <string name="register_error_account_exists">An account with the provided email already exists.</string>
 
-    <!--Forgot Password Fragment-->
     <string name="forgot_pw_text_title">Reset\nPassword</string>
     <string name="forgot_pw_text_description">Enter your verified email to receive password reset instructions.</string>
     <string name="forgot_pw_title_email">Email Address</string>
@@ -74,7 +69,6 @@
     <string name="forgot_pw_error_email">The entered email address is not valid!</string>
     <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
 
-    <!--Forgot Password Sent Fragment-->
     <string name="forgot_pw_sent_text_title">Check\nYour\nInbox</string>
     <string name="forgot_pw_sent_text_description">Please check your inbox and click on the received link to reset your password.</string>
     <string name="forgot_pw_sent_text_resend">Didn\'t receive the link?</string>
@@ -83,27 +77,37 @@
     <string name="forgot_pw_sent_text_resent">A new email has been sent.</string>
     <string name="forgot_pw_sent_btn_return">Return To Login</string>
 
-    <!--Main Activity-->
     <string name="main_menu_title_warranties">Warranty List</string>
     <string name="main_menu_title_settings">Settings</string>
     <string name="main_text_content_description">Add Warranty</string>
-    <string name="main_rate_app_dialog_title">Rate %1$s?</string>
+    <!--Placeholder for the App Name-->
+    <string name="main_rate_app_dialog_title">Rate %s?</string>
     <string name="main_rate_app_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
     <string name="main_rate_app_dialog_positive">Rate now</string>
     <string name="main_rate_app_dialog_negative">No, Thanks</string>
     <string name="main_rate_app_dialog_neutral">Remind me later</string>
 
-    <!--Warranties Fragment-->
     <string name="warranties_text_title">Warranty List</string>
     <string name="warranties_menu_hint_search">Search by title…</string>
     <string name="warranties_text_empty_warranties_list">There is currently no warranty on your list. You can add a warranty by clicking on the <font fgcolor="#1C53F4">Add Button</font>.</string>
-    <string name="warranties_text_empty_search_result_list">We couldn\'t find any warranty that matches your search for <font fgcolor="#1C53F4">%1$s</font>.</string>
+    <string name="warranties_text_empty_search_result_list">We couldn\'t find any warranty that matches your search for <font fgcolor="#1C53F4">%s</font>.</string>
     <string name="warranties_list_ad_indicator" translatable="false">Ad</string>
     <string name="warranties_list_status_valid">Valid</string>
     <string name="warranties_list_status_soon">Soon</string>
     <string name="warranties_list_status_expired">Expired</string>
     <string name="warranties_list_is_lifetime">Lifetime Warranty</string>
-    <string name="warranties_list_format_date">%1$s %2$s, %3$d</string> <!--month_name day_with_suffix, yyyy-->
+    <!--
+    Placeholders:
+    • %1$s: Month Name
+    • %2$s: Day with Suffix
+    • %3$d: Year (yyyy)
+
+    Samples:
+    • en-US: December 25th, 2022
+    • en-GB: 25th of December, 2022
+    • fa-IR: بیست و پنجم دسامبر، ۲۰۲۲
+    -->
+    <string name="warranties_list_format_date">%1$s %2$s, %3$d</string>
     <string-array name="warranties_list_day_with_suffix">
         <item>1st</item>
         <item>2nd</item>
@@ -152,7 +156,6 @@
         <item>December</item>
     </string-array>
 
-    <!--Add Warranty Fragment-->
     <string name="add_warranty_text_title">Add Warranty</string>
     <string name="add_warranty_menu_title_add">Add Warranty</string>
     <string name="add_warranty_title_title">Title</string>
@@ -175,9 +178,19 @@
     <string name="add_warranty_error_blank_title">Enter the title!</string>
     <string name="add_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
     <string name="add_warranty_checkbox_lifetime">Lifetime Warranty</string>
-    <string name="add_warranty_format_date">%1$s/%2$s/%3$d</string> <!--mm/dd/yyyy-->
+    <!--
+    Placeholders:
+    • %1$s: Month (mm)
+    • %2$s: Day (dd)
+    • %3$d: Year (yyyy)
 
-    <!--Warranty Details Fragment-->
+    Samples:
+    • en-US: 12/25/2022
+    • en-GB: 25/12/2022
+    • fa-IR: 2022/12/25
+    -->
+    <string name="add_warranty_format_date">%1$s/%2$s/%3$d</string>
+
     <string name="warranty_details_fab_edit">Edit</string>
     <string name="warranty_details_menu_title_delete">Delete Warranty</string>
     <string name="warranty_details_title_date_starting">Starting Date</string>
@@ -194,13 +207,25 @@
     <string name="warranty_details_empty_device" translatable="false">•</string>
     <string name="warranty_details_empty_description">No description is provided.</string>
     <string name="warranty_details_delete_dialog_title">Delete Warranty?</string>
+    <!--Placeholder for the Warranty Title-->
     <string name="warranty_details_delete_dialog_message">Are you sure you want to delete %s?</string>
     <string name="warranty_details_delete_dialog_positive">Delete</string>
     <string name="warranty_details_delete_dialog_negative">Cancel</string>
+    <!--Placeholder for the Warranty Title-->
     <string name="warranty_details_delete_success">%s has been successfully deleted.</string>
-    <string name="warranty_details_format_date">%1$s/%2$s/%3$d</string> <!--mm/dd/yyyy-->
+    <!--
+    Placeholders:
+    • %1$s: Month (mm)
+    • %2$s: Day (dd)
+    • %3$d: Year (yyyy)
 
-    <!--Edit Warranty Fragment-->
+    Samples:
+    • en-US: 12/25/2022
+    • en-GB: 25/12/2022
+    • fa-IR: 2022/12/25
+    -->
+    <string name="warranty_details_format_date">%1$s/%2$s/%3$d</string>
+
     <string name="edit_warranty_text_title">Edit Warranty</string>
     <string name="edit_warranty_menu_title_edit">Edit Warranty</string>
     <string name="edit_warranty_title_title">Title</string>
@@ -223,9 +248,19 @@
     <string name="edit_warranty_error_blank_title">Enter the title!</string>
     <string name="edit_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
     <string name="edit_warranty_checkbox_lifetime">Lifetime Warranty</string>
-    <string name="edit_warranty_format_date">%1$s/%2$s/%3$d</string> <!--mm/dd/yyyy-->
+    <!--
+    Placeholders:
+    • %1$s: Month (mm)
+    • %2$s: Day (dd)
+    • %3$d: Year (yyyy)
 
-    <!--Settings Fragment-->
+    Samples:
+    • en-US: 12/25/2022
+    • en-GB: 25/12/2022
+    • fa-IR: 2022/12/25
+    -->
+    <string name="edit_warranty_format_date">%1$s/%2$s/%3$d</string>
+
     <string name="settings_text_title">Settings</string>
     <string name="settings_title_account">Account</string>
     <string name="settings_title_settings">Settings</string>
@@ -253,7 +288,6 @@
     <string name="settings_dialog_positive">Confirm</string>
     <string name="settings_ad_indicator" translatable="false">Ad</string>
 
-    <!--Change Password Fragment-->
     <string name="change_password_text_title">Change Password</string>
     <string name="change_password_title_current_password">Current Password</string>
     <string name="change_password_hint_current_password">Enter your current password</string>
@@ -274,7 +308,6 @@
     <string name="change_password_dialog_message">Your password has been successfully changed.</string>
     <string name="change_password_dialog_positive">Confirm</string>
 
-    <!--Change Email Fragment-->
     <string name="change_email_text_title">Change Email Address</string>
     <string name="change_email_title_password">Password</string>
     <string name="change_email_hint_password">Enter your password</string>
